apps/face-recognition/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: face-recognition
  labels:
    app.kubernetes.io/name: face-recognition
